# normflow

./: .gitignore  INSTALL  LICENSE  README.md  README.rst  pyproject.toml  setup.py
examples/: gauge_elementwise_pade22_slinkflow.py  matrix_model.py  multi-planar-flow.html  multi-planar-flow.ipynb  scalar_1dof.py  scalar_affine_coupling.py  scalar_model__affine_coupling.py  scalar_psd_affine_coupling.py  unittest.sh
examples/scalar_model/: scalar_affine_coupling.py  scalar_fibo_autoreg.py  scalar_psd_affine_coupling.py  scalar_psd_pade32a_coupling.py  scalar_psd_spline_coupling.py
src/: __init__.py  _normflowcore.py
src/action/: gauge_action.py  matrix_action.py  scalar_action.py
src/device/: _core.py
src/lib/linalg/: __init__.py  eig_decomposition_.py  mean.py
src/lib/matrix_handles/: __init__.py  flow_handle.py  matrix_handle.py  staples_handle.py
src/lib/spline/: __init__.py  spline.py
src/lib/stats/: ginibre_dist.py  unitary_group.py
src/mask/: __init__.py  double_mask.py  matrix_mask.py
src/nn/: __init__.py  _core.py
src/nn/gauge/: gauge_module_.py  gauge_param_couplings_.py  gauge_param_dual_couplings_.py  modal_commutator_odeflow_.py  planar_gauge_module_.py  trivializing_map_.py  unitary_flow_.py  wilson_modal_odeflow_handle.py
src/nn/matrix/: lie_group_modules_.py  matrix_module_.py  stapled_matrix_module_.py
src/nn/scalar/: auto_regressive_.py  cntr_couplings_.py  couplings_.py  fftflow_.py  meanfield_.py  modules.py  modules_.py  planar_.py  psd_.py
src/normflow/: _normflowcore.py  _trainer.py
src/prior/: prior.py  unitary_prior.py
(+45 files in other folders)
