[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "normflow"
version = "2.0"
description = "Normalizing flow for generating lattice field configurations"
readme = "README.md"
authors = [{ name = "Javad Komijani", email = "jkomijani@gmail.com" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/jkomijani/normflow"

[tool.setuptools.packages.find]
where = ["src"]
